--- a/Billing.ApiGetAway/Properties/launchSettings.json
+++ b/Billing.ApiGetAway/Properties/launchSettings.json
@@ -21,8 +21,15 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:5021;http://localhost:5020",
+      5"applicationUrl": "http://localhost:5472",
       "dotnetRunMessages": "true"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "publishAllPorts": true,
+      "useSSL": true
     }
   }
 }
