--- a/Billing.Authentication.Api/appsettings.json
+++ b/Billing.Authentication.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionSetting": {
-    "ConnectionString": "mongodb://localhost:27017",
+    "ConnectionString": "mongodb://host.docker.internal:27017",
     "Database": "BillingUserDatabase"
   },
   "Logging": {
